fixed some spacing with logo

--- a/data/main.css
+++ b/data/main.css
@@ -115,7 +115,7 @@ body {
 .offcanvas.offcanvas-start {
   width: 220px;
 }
-.offcanvas .offcanvas-header {
+.offcanvas-header {
   flex-direction: column;
   border-bottom: 1px solid #222;
   background: #181818;
